# practical-system-design

./: .gitignore  README.md  admin-dashboards-guide.md  app.py  docker-compose.yml  open-dashboards.sh  practical-system-design.md  requirements.txt  start.sh  test-websocket-complete.sh  test_websocket.html  test_websocket_clients.py  websocket-test-guide.md
automation/browser-use/: README.md  alice_agent.py  bob_agent.py  requirements.txt
automation/stagehand/: README.md  alice-agent.js  bob-agent.js  multi-session-chat.js  package-lock.json  package.json
common/: pyproject.toml
common/common/: __init__.py
common/common/database/: __init__.py  dynamodb.py  postgres.py  redis.py
common/common/models/: __init__.py  chat.py  contact.py  inbox.py  invite.py  messages.py  responses.py  user.py
common/common/observability/: __init__.py  correlation.py  tracing.py
common/common/storage/: __init__.py  s3.py
components/: cache.yaml  statestore.yaml
docs/: contact-invite-spec.md  inbox-pattern.md  postgres-horizontal-scaling-phase1.md  postgres-scaling-quick-reference.md
docs/specs/: add-contacts-to-chat.md
lambda/upload-processor/: handler.py  requirements.txt
nginx/: nginx.conf
scripts/: 01-init-s3.sh  03-init-lambda.sh  generate-postgres-replicas.sh  init-dynamodb.sh  init-lambda.sh
services/chat-service/: Dockerfile  requirements.txt
services/chat-service/src/: __init__.py  config.py  kafka_consumer.py  main.py  websocket.py
services/chat-service/src/models/: __init__.py
services/chat-service/src/repositories/: __init__.py  dynamodb.py
services/chat-service/src/routes/: __init__.py  chats.py  health.py  websocket.py
services/chat-service/src/services/: __init__.py  chat_service.py  user_service_client.py
services/copilot-service/: Dockerfile  README.md  pyproject.toml
services/copilot-service/src/: __init__.py  config.py  main.py
services/copilot-service/src/agent/: __init__.py  context.py  graph.py  prompts.py  state.py
services/copilot-service/src/agent/tools/: __init__.py  chat_tools.py  context_tools.py  invite_tools.py  message_tools.py
services/copilot-service/src/routes/: __init__.py  copilot.py  health.py
services/copilot-service/src/services/: __init__.py  chat_service_client.py  user_service_client.py
services/user-service/: Dockerfile  alembic.ini  requirements.txt
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 001_create_invites_table.py  002_create_contacts_table.py  99f5f278dd9c_create_users_table_with_connect_pin.py
services/user-service/src/: __init__.py  config.py  database.py  main.py
services/user-service/src/models/: __init__.py
services/user-service/src/repositories/: __init__.py  cache.py  contact_repository.py  invite_repository.py  postgres.py  sqlmodel_postgres.py
services/web-app/: package-lock.json  package.json
src/: __init__.py  config.py  main.py  utils.py
src/models/: __init__.py  chat.py  user.py
src/repositories/: __init__.py  cache.py  dynamodb.py  state_store.py
src/routes/: __init__.py  chats.py  health.py  users.py
src/services/: __init__.py  chat_service.py  user_service.py
(+46 files in other folders)
